Cambiar el índex por links a todas las funciones

--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,24 @@
     </script>
   <body>
     <div id="container">
-      <h1>To-Do List</h1>
-      <form id="new_task">
-        <input type="text" name="task[name]" id="task_name">
-        <input type="submit" value="Add">
-      </form>
-      <ul id="tasks"></ul>
+      <h1>Funciones</h1>
+      <ul id="tasks">
+        <li><a href="/init">init</a></li>
+        <li><a href="/rest_lista">rest_lista</a></li>
+        <li><a href="/rest_datos">rest_datos</a></li>
+        <li><a href="/rest_disponibilidad">rest_disponibilidad</a></li>
+        <li><a href="/rest_reserva_agregar">rest_reserva_agregar</a></li>
+        <li><a href="/rest_reserva_cancelar">rest_reserva_cancelar</a></li>
+        <li><a href="/usuario_login">usuario_login</a></li>
+        <li><a href="/usuario_regpswd">usuario_regpswd</a></li>
+        <li><a href="/usuario_registro">usuario_registro</a></li>
+        <li><a href="/usuario_datos">usuario_datos</a></li>
+        <li><a href="/usuario_editar">usuario_editar</a></li>
+        <li><a href="/valoracion">valoracion</a></li>
+        <li><a href="/usuario_favorito_agregar">usuario_favorito_agregar</a></li>
+        <li><a href="/usuario_favorito_eliminar">usuario_favorito_eliminar</a></li>
+        <li><a href="/preguntas">preguntas</a></li>
+      </ul>
     </div>
   </body>
 </html>
