Mas cambios de "rest_disponibilidad_rango_plazas"

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
         <li><a href="/init">init</a></li>
         <li><a href="/rest_lista">rest_lista</a></li>
         <li><a href="/rest_datos">rest_datos</a></li>
-        <li><a href="/rest_disponibilidad">rest_disponibilidad</a></li>
+        <li><a href="/rest_disponibilidad_rango_plazas">rest_disponibilidad_rango_plazas</a></li>
+        <li><a href="/rest_disponibilidad_horas_disponibles">rest_disponibilidad_horas_disponibles</a></li>
         <li><a href="/rest_reserva_agregar">rest_reserva_agregar</a></li>
         <li><a href="/rest_reserva_cancelar">rest_reserva_cancelar</a></li>
         <li><a href="/usuario_login">usuario_login</a></li>
