--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,21 @@
         <div class="col-md-9" role="main">
           <h1>API Mesafija</h1>
 
+          <div class="page-header" id="init">
+            <h1>Id Cliente <small>Introduzca el ID para poder empezar a utilizar las API's</small></h1>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Id Cliente</label>
+            <input type="text" class="form-control" id="idCliente" placeholder="Id Cliente">
+          </div>
+
           <!-- INIT -->
           <div class="page-header" id="init">
             <h1>Init <small>Subtext for header</small></h1>
           </div>
 
           <form action="/init" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <button type="submit" class="btn btn-default">Enviar</button>
           </form>
 
@@ -49,6 +58,7 @@
           </div>
 
           <form action="/rest_lista" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id ciudad</label>
               <input type="text" class="form-control" id="ciudad" placeholder="Id ciudad" name="ciudad">
@@ -74,6 +84,7 @@
           </div>
 
           <form action="/rest_datos" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -87,6 +98,7 @@
           </div>
 
           <form action="/rest_disponibilidad_calendario" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -112,6 +124,7 @@
           </div>
 
           <form action="/rest_disponibilidad_rango_plazas" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -134,6 +147,7 @@
           </div>
 
           <form action="/rest_disponibilidad_turno_disponibles" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -160,6 +174,7 @@
           </div>
 
           <form action="/rest_disponibilidad_horas_disponibles" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -188,7 +203,8 @@
             <h1>Rest_reserva_agregar <small>Servicio que permite reservar mediante los datos proporcionados con los servicios rest_disponibilidad y usuario_datos</small></h1>
           </div>
 
-          <form action="/rest_reserva_agregar" method="get" role="form" target="_blank">
+          <form action="/rest_reserva_agregar" method="post" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -229,7 +245,8 @@
             <h1>Rest_reserva_cancelar <small>Servicio que permite cancelar una reserva mediante los datos proporcionados con el servicio usuario_datos</small></h1>
           </div>
 
-          <form action="/rest_reserva_cancelar" method="get" role="form" target="_blank">
+          <form action="/rest_reserva_cancelar" method="post" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id reserva</label>
               <input type="text" class="form-control" id="id_reserva" placeholder="Id reserva" name="id_reserva">
@@ -242,14 +259,15 @@
             <h1>Usuario_login <small>Servicio que permite el reconocimiento del usuario</small></h1>
           </div>
 
-          <form action="/usuario_login" method="get" role="form" target="_blank">
+          <form action="/usuario_login" method="post" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Email</label>
               <input type="text" class="form-control" id="email" placeholder="Email" name="email">
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Password</label>
-              <input type="text" class="form-control" id="password" placeholder="Password" name="password">
+              <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
             <button type="submit" class="btn btn-default">Enviar</button>
           </form>
@@ -260,6 +278,7 @@
           </div>
 
           <form action="/usuario_regpswd" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Email</label>
               <input type="text" class="form-control" id="email" placeholder="Email" name="email">
@@ -273,6 +292,7 @@
           </div>
 
           <form action="/usuario_registro" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Nombre</label>
               <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre">
@@ -306,6 +326,7 @@
           </div>
 
           <form action="/usuario_datos" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id usuario</label>
               <input type="text" class="form-control" id="idUsuario" placeholder="Id usuario" name="idUsuario">
@@ -319,6 +340,7 @@
           </div>
 
           <form action="/usuario_editar" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id usuario</label>
               <input type="text" class="form-control" id="idUsuario" placeholder="Id usuario" name="idUsuario">
@@ -352,6 +374,7 @@
           </div>
 
           <form action="/valoracion" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id restaurante</label>
               <input type="text" class="form-control" id="idRestaurante" placeholder="Id restaurante" name="idRestaurante">
@@ -365,6 +388,7 @@
           </div>
 
           <form action="/usuario_favorito_agregar" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id usuario</label>
               <input type="text" class="form-control" id="idUsuario" placeholder="Id usuario" name="idUsuario">
@@ -382,6 +406,7 @@
           </div>
 
           <form action="/usuario_favorito_eliminar" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <div class="form-group">
               <label for="exampleInputEmail1">Id favorito</label>
               <input type="text" class="form-control" id="idFavorito" placeholder="Id favorito" name="idFavorito">
@@ -404,6 +429,7 @@
           </div>
 
           <form action="/preguntas" method="get" role="form" target="_blank">
+            <input type="hidden" class="form-control idCliente" placeholder="Id Cliente" name="idCliente">
             <button type="submit" class="btn btn-default">Enviar</button>
           </form>
         </div>
@@ -434,5 +460,10 @@
         </div>
       </div>
     </div>
+    <script>
+      $("#idCliente").blur(function() {
+        $(".idCliente").val($("#idCliente").val());
+      });
+    </script>
   </body>
 </html>
